--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         <activity android:name=".HistoryMusic"></activity>
         <activity android:name=".LocalMusic"></activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".fragment.My_Favorite_Music"></activity>
+        <activity android:name=".fragment.Personal_FM"></activity>
     </application>
 
 </manifest>
