--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ repositories {
 }
 dependencies {
     implementation 'com.google.android.material:material:1.1.0'
-    compile 'com.gjiazhe:PanoramaImageView:1.0'
+    implementation 'com.gjiazhe:PanoramaImageView:1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
@@ -45,5 +45,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
 }
