--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.musicplayer_hezhao">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -42,6 +43,10 @@
         <activity android:name=".fragment.Personal_FM"></activity>
         <activity android:name=".StartActivity"></activity>
 <!--        <activity android:name=".PlayMusicActivity"></activity>-->
+        <service android:name=".Service.MusicService"/>
+        <provider
+            android:authorities="com.example.musicplayer_hezhao.ContentProvider"
+            android:name=".ContentProvider.PlayListProvider"/>
 
     </application>
 
