--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,49 +5,72 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
     <application
+        android:screenOrientation="portrait"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PlayMusicActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchActivity">
-            <intent-filter>
-                <action  android:name="android.intent.action.searchmusic"/>
-                <category android:name="android.intent.category.searchmusic.search"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".menu_work.change_background_activity"></activity>
-        <activity android:name=".menu_work.nav_developer_msg_activity"></activity>
-        <activity android:name=".menu_work.nav_listening_activity"></activity>
-        <activity android:name=".menu_work.nav_msg_activity"></activity>
-        <activity android:name=".menu_work.nav_order_activity"></activity>
-        <activity android:name=".menu_work.nav_price_activity"></activity>
-        <activity android:name=".menu_work.nav_show_activity"></activity>
-        <activity android:name=".menu_work.nav_stop_activity"></activity>
-        <activity android:name=".menu_work.nav_store_activity"></activity>
-        <activity android:name=".LoginMainActivity"></activity>
-        <activity android:name=".DownLoadMusic"></activity>
-        <activity android:name=".HistoryMusic"></activity>
-        <activity android:name=".LocalMusic"></activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".fragment.My_Favorite_Music"></activity>
-        <activity android:name=".Song_Show"></activity>
-        <activity android:name=".fragment.Personal_FM"></activity>
-        <activity android:name=".StartActivity"></activity>
-<!--        <activity android:name=".PlayMusicActivity"></activity>-->
-        <service android:name=".Service.MusicService"/>
-        <provider
-            android:authorities="com.example.musicplayer_hezhao.ContentProvider"
-            android:name=".ContentProvider.PlayListProvider"/>
 
+        <activity android:name=".SearchActivity"/>
+
+        <activity android:name=".menu_work.change_background_activity" />
+
+        <activity android:name=".menu_work.nav_developer_msg_activity" />
+
+        <activity android:name=".menu_work.nav_listening_activity"/>
+
+        <activity android:name=".menu_work.nav_msg_activity"/>
+
+        <activity android:name=".menu_work.nav_order_activity"/>
+
+        <activity android:name=".menu_work.nav_price_activity"/>
+
+        <activity android:name=".menu_work.nav_show_activity"/>
+
+        <activity android:name=".menu_work.nav_stop_activity"/>
+
+        <activity android:name=".menu_work.nav_store_activity"/>
+
+        <activity android:name=".LoginMainActivity"/>
+
+        <activity android:name=".DownLoadMusic"/>
+
+        <activity android:name=".HistoryMusic"/>
+
+        <activity android:name=".LocalMusic"/>
+
+        <activity android:name=".StartActivity"/>
+
+        <activity android:name=".fragment.My_Favorite_Music"/>
+
+        <activity android:name=".Song_Show"/>
+
+        <activity android:name=".fragment.Personal_FM"/>
+
+        <activity android:name=".PlayMusicActivity"/>
+
+        <activity android:name=".Local_Singer_Show_Activity"/>
+
+        <activity android:name=".AddMusicListActivity"/>
+
+        <activity android:name=".ManagerMusicListActivity"/>
+
+        <provider
+            android:exported="true"
+            android:authorities="com.example.musicplayer_hezhao.ContentProvider.PlayListProvider"
+            android:name=".ContentProvider.PlayListProvider" />
+
+        <service android:name=".Service.MusicService" />
+        <service android:name=".Service.MyFavoriteMusic_Service" />
     </application>
 
 </manifest>
