--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,17 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.example.musicplayer_hezhao"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true //就是这句，添加进来
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -26,6 +29,11 @@ android {
 //图片处理，高斯模糊
 repositories {
     jcenter()
+}
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
 dependencies {
     implementation 'com.google.android.material:material:1.1.0'
@@ -54,6 +62,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'io.reactivex:rxjava:1.1.3'
+    compile 'io.reactivex:rxandroid:1.1.0'
+
 // 用Gson解析json的转换器
     implementation 'com.google.code.gson:gson:2.8.5'
 
@@ -62,9 +74,19 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
 
     //视频播放控件
-    compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'fm.jiecao:jiecaovideoplayer:4.8.3'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
+
+    implementation 'com.jakewharton:butterknife:10.2.0'
+    implementation 'com.jakewharton:butterknife-compiler:10.2.0'
+
+
+//
+//
+//    //ijkplayer引入
+//    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
+//    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
 
 
 }
