--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,9 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.0'
     implementation 'com.jakewharton:butterknife-compiler:10.2.0'
 
-    compile 'com.jaeger.statusbaruitl:library:1.0.0'
+    implementation 'com.jaeger.statusbaruitl:library:1.0.0'
+
+    implementation 'com.wang.avi:library:2.1.3'
 //
 //
 //    //ijkplayer引入
